--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-
+    "dev": "nodemon \"npm run server\" \"npm run client\""
   },
   "author": "rutuja",
   "license": "ISC",
@@ -23,5 +22,8 @@
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
